# ntk_experiments

./: .gitignore  README.md  pyproject.toml
latex/: main.tex
notes/: ntk.md
src/ntk_experiments/: __init__.py  compare.py  config.py  dataset.py  empirical_ntk.py  inference.py  main.py  mlp_ntk.py  ntkmlp_model.py  plot.py  random_walk.py  theoretical_ntk.py  train.py
