[project]
name = "ntk-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Méo Desbois-Renaudin", email = "meo.desbois@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ntk-experiments = "ntk_experiments:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
