[project]
name = "ntk-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Méo Desbois-Renaudin", email = "meo.desbois@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pyqt6>=6.11.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
]

[project.optional-dependencies]
cu126 = [
    "torch>=2.10.0",
]
cpu = [
    "torch>=2.10.0",
]

[tool.uv]
conflicts = [
    [
      { extra = "cu126" },
      { extra = "cpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "torch-cu126", extra = "cu126" },
    { index = "torch-cpu", extra = "cpu" },
]

[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
ntk-experiments = "ntk_experiments:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
